# hidreport

./: .pre-commit-config.yaml  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
src/: hid.rs  hut.rs  hut.rs.jinja  lib.rs  types.rs
tests/: hid-descriptors.rs
tests/data/: libinput-issue201-0003-06A3-0C2D-0.rdesc  libinput-issue201-0003:1FD1:03EA-0.rdesc  libinput-issue243-0003:05AC:0265-0.rdesc  libinput-issue316-0003-192F-0716-0.rdesc  libinput-issue318-0003-044E-120D-0.rdesc  libinput-issue321-0003:045E:07E8-0.rdesc  libinput-issue329-0018:044E:120B-0.rdesc  libinput-issue339-0005:05AC:030E-0.rdesc  libinput-issue342-0018-06CB-8323-0.rdesc  libinput-issue349-0003-045E-009D-0.rdesc  libinput-issue352-0003:28BD:0077-0.rdesc  libinput-issue356-0003-28BD-090D-0.rdesc  libinput-issue359-0018:0911:5288-0.rdesc  libinput-issue380-0018-06CB-82F5-0.rdesc  libinput-issue387-0018:06CB:CD8B-0.rdesc  libinput-issue403-0003:256C:006D-0.rdesc  libinput-issue410-0003:1532:0224-0.rdesc  libinput-issue416-0018:0911:5288-0.rdesc  libinput-issue417-0018:06CB:CD7A-0.rdesc  libinput-issue423-0018:0488:121F-0.rdesc  libinput-issue435-0018-27C6-01F0-0.rdesc  libinput-issue437-0018-04F3-3115-0.rdesc  libinput-issue438-0003:17EF:60B5-0.rdesc  libinput-issue449-0018-04F3-30D0-0.rdesc  libinput-issue455-0003:1D57:AD03-0.rdesc  libinput-issue463-0018:04F3:30FD-0.rdesc  libinput-issue467-0003:1BCF:08A6-0.rdesc  libinput-issue468-0003-258A-001E-0.rdesc  libinput-issue470-0003-046D-1028-0.rdesc  (+108 more)
tools/: hut-parser.py  libinput-recording-extract-hid-descriptor.py
