[package]
name = "hidreport"
version = "0.4.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/hidutils"
repository = "https://github.com/hidutils/hut"
description = "HID Report Descriptor and HID Report parser"
exclude = [
    "/tests/data/*.hid.bin",
    "/tests/data/*.rdesc",
]

[features]
default = ["hut"]
hut = [ "dep:hut" ]

[dependencies]
thiserror = "1.0.58"
hut = { version = "0.3.0", optional = true }
