[package]
name = "hidreport"
version = "0.5.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/hidutils"
repository = "https://github.com/hidutils/hidreport"
description = "HID Report Descriptor and HID Report parser"
exclude = [
    "/tests/data/*.hid.bin",
    "/tests/data/*.rdesc",
]

[features]
default = ["hut", "std"]
hut = [ "dep:hut" ]
std = [ "hut/std", "thiserror/std" ]

[dependencies]
thiserror = { version = "2.0", default-features = false }
hut = { version = "0.4", optional = true, default-features = false }

[dev-dependencies]
hut = "0.4"
